# Rocaloid-old

./: .gitignore  AUTHORS  COPYING  COPYING.txt  COPYING~  README  README.md  post.sh  rocaloidengine.tar.bz2  test.txt
RocaloidDevTools/CVDBToolChain/C2Wav/: C2Wav.pro  CMakeLists.txt  main.c
RocaloidEngine/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  autogen.sh  configure  configure.ac
RocaloidEngine/.anjuta/: default.profile
RocaloidEngine/.anjuta/session/: anjuta.session  dock-layout.xml
RocaloidEngine/CVE3/: CMakeLists.txt  CVE3.pro  CVE3.pro.user.2.7pre1  CVEConfig.h  CVEDSP  CVEGlobal.c  CVEGlobal.h  DSPInclude.h  RFILE3  main.c  make.ms
RocaloidEngine/CVE3/DSPEx/: FDFrame.c  FDFrame.h  FECSOLAEx.c  FECSOLAEx.h  LCFECSOLA.c  LCFECSOLA.h
RocaloidEngine/CVE3/Debug/: ALblLog.c  ALblLog.h
RocaloidEngine/CVE3/Synthesizer/: CSynth.c  CSynth.h  FSynth.c  FSynth.h  FSynthSpectrumModification.c  FSynthSpectrumModification.h  MixerMacro.h  MixerPitchTransition.h  MixerTransition.h  PitchMixer.c  PitchMixer.h  PitchMixerMacro.h  PitchMixerPitchTransition.c  SpeechMixer.c  SpeechMixer.h  SyllableVariator.c  SyllableVariator.h  Synthesizer.c  Synthesizer.h
RocaloidEngine/LibCVSCommon/: CVSCommon.cc  CVSCommon.h  CVSReader.cc  CVSReader.h  CVSWriter.cc  CVSWriter.h  Makefile.am  Makefile.in  RDLIO.cc
RocaloidEngine/LibCyberBase/: CVSCommon.cc  CVSCommon.h  CVSWriter.cc  Makefile.am  Makefile.in  Overall.cc  Overall.h  RDLIO.cc  RDLIO.h
RocaloidEngine/LibRSCCommon/: Makefile.am  Makefile.in  RSCCommon.cc  RSCCommon.h  RSCReader.cc  RSCReader.h
RocaloidEngine/LibRSCCommon/CDTCommon/: CDTCommon.cc  CDTCommon.h  CDTReader.cc  CDTReader.h
RocaloidEngine/RFILE3/: RDL.c  RDL.h  RFILE3.pro  main.c
RocaloidEngine/RFILE3/CDT3/: CDT3.c  CDT3.h  CDT3Reader.c  CDT3Reader.h  CDT3Writer.c  CDT3Writer.h  Demapper.c  Demapper.h
RocaloidEngine/RFILE3/CVDB3/: CVDB3IO.c  CVDB3IO.h
RocaloidEngine/RFILE3/CVS3/: CVS3.c  CVS3.h  CVSRDLReader.c  CVSRDLReader.h  CVSRDLWriter.c  CVSRDLWriter.h
RocaloidEngine/SPKit/: Makefile.am  clearbak.sh
RocaloidEngine/SPKit/io/: Makefile.in  fileStream.cc  fileStream.h  memoryStream.cc  memoryStream.h  stringStream.cc  stringStream.h  terminal.cc
RocaloidEngine/SPKit/misc/: converter.cc  converter.h  listopr.h  memopr.h
RocaloidEngine/SPKit/structure/: Makefile.in  array.h  string.cc  string.h
RocaloidEngine/po/: Makefile.in
RocaloidEngine/src/: CDT.cc  DEF.cc  Makefile.am  Makefile.in  cve_main.cc  cve_main.h  main.cc
RocaloidEngine/src/LibCVE/: Makefile.am  Makefile.in  PitchCalc.cc  PitchCalc.h  Scheduler.cc  Scheduler.h
RocaloidEngine/src/LibCVE/Effector/: Effector.cc  Effector.h  EnvEffector.cc  EnvEffector.h  MixerWriter.cc  MixerWriter.h  WaveEffector.cc  WaveEffector.h
RocaloidEngine/src/LibCVE/Synthesizer/: ConsecutivePreSynthesizer.cc  ConsecutivePreSynthesizer.h  PitchPreSynthesizer.cc  PitchPreSynthesizer.h  SpeechSynthesizer.cc  SpeechSynthesizer.h  Synthesizer.cc  Synthesizer.h
RocaloidEngine/src/LibCVSCommon/: CVSCommon.cc  CVSCommon.h  CVSReader.cc  CVSReader.h  CVSWriter.cc  CVSWriter.h  Makefile.am  Makefile.in
RocaloidEngine/src/LibCyberBase/: FrameBuffer.cc  FrameBuffer.h  Makefile.am  Makefile.in  MultiFrameBuffer.cc  MultiFrameBuffer.h  Overall.cc  Overall.h  RDLIO.cc  RDLIO.h  WaveBuffer.cc  WaveBuffer.h
RocaloidEngine/src/LibCyberBase/CVDB/: CBVIO.cc  CBVIO.h  CVDB.cc  CVDB.h  FrameBuffer.cc  FrameBuffer.h
RocaloidEngine/src/LibCyberBase/SPKit/: Makefile.am  Makefile.in  defs.h  main.cc
RocaloidEngine/src/LibCyberBase/SlWave/: wave.cc  wave.h
RocaloidEngine/src/LibRSCCommon/: Makefile.am  Makefile.in  RSCCommon.cc  RSCCommon.h  RSCReader.cc  RSCReader.h  RSCWriter.cc  RSCWriter.h
RocaloidEngine/src/LibRSCCommon/CDTCommon/: CDTCommon.cc  CDTCommon.h  CDTReader.cc  CDTReader.h
RocaloidEngine/src/LibRSCCommon/CVSGenerator/: EffectGen.cc  EffectGen.h  (+6 more)
cvscommon/: .anjuta_sym_db.db  Makefile.am  configure.ac
cvscommon/.anjuta/: default.profile
cvscommon/.anjuta/session/: anjuta.session
cvscommon/src/: CVSCommon.cc  CVSCommon.h  Makefile.am
cyberengine/lib/: Makefile.am  Makefile.in  Overall.cc  RDLIO.cc  RDLIO.h
rocaloidengine/: SPKit.tar.bz2  aclocal.m4  configure  configure.ac
rocaloidengine/.anjuta/session/: anjuta.session  dock-layout.xml
rocaloidengine/LibCVSCommon/: CVSCommon.h  CVSReader.cc  CVSReader.h  CVSWriter.cc  CVSWriter.h  Makefile.am  Makefile.am~1  Makefile.in  RDLIO.cc  RDLIO.h
rocaloidengine/LibCyberBase/: CVSCommon.cc  CVSCommon.h  Makefile.am  Makefile.in  Overall.cc  Overall.h  RDLIO.cc  RDLIO.h  cvector.h
rocaloidengine/SPKit/: defs.h  main.cc
rocaloidengine/SPKit/io/: fileStream.cc  fileStream.h  memoryStream.cc  memoryStream.h  stringStream.cc  stringStream.h  terminal.cc  terminal.h
rocaloidengine/SPKit/misc/: converter.cc  converter.h
rocaloidengine/SPKit/structure/: array.cc  array.h  string.cc  string.h
rocaloidengine/src/: CVSCommon.cc  CVSReader.cc  CVSReader.h  CVSWriter.cc  Makefile.am  Makefile.in  config.h  config.status  main.cc
rsccommon/: .anjuta_sym_db.db  AUTHORS  Debug  Makefile.am  configure  configure.ac
rsccommon/.anjuta/: default.profile
rsccommon/.anjuta/session/: anjuta.session  dock-layout.xml
rsccommon/Debug/: Makefile  config.status
rsccommon/Debug/lib/: Makefile  Overall.lo  converter.lo  fileStream.lo  librsccommon.la  string.lo
rsccommon/Debug/po/: Makefile
rsccommon/Debug/src/: Makefile  rsctool
rsccommon/SPKit/: Makefile.am  Makefile.in  main.cc  spkit.h  spkit.h~
rsccommon/SPKit/io/: Makefile.in  fileStream.cc  fileStream.h  memoryStream.h  terminal.h
rsccommon/SPKit/misc/: Makefile.in  converter.cc  converter.h  memopr.h
rsccommon/SPKit/structure/: Makefile.in  string.cc  string.h
rsccommon/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
rsccommon/lib/: Makefile.am  Makefile.in  Overall.cc  Overall.cc~  Overall.h  Overall.h~  RDLIO.cc  RDLIO.h  test.cc  test.cc~
rsccommon/src/: Makefile.am  Makefile.in  libtool  main.cc  main.cc~
rsccommon/src/po/: Makefile.in
(+281 files in other folders)
