dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(rocaloidengine, 0.1-trunk)

AC_CONFIG_HEADERS([config.h])

AM_INIT_AUTOMAKE([1.11])

AM_SILENT_RULES([yes])

AC_PROG_CXX




dnl ***************************************************************************
dnl Internationalization
dnl ***************************************************************************



LT_INIT


AC_OUTPUT([
Makefile
src/Makefile
src/LibCyberBase/Makefile
src/LibCVSCommon/Makefile
src/LibRSCCommon/Makefile
src/LibCVE/Makefile
])
