
libCyberBase_la_CXXFLAGS = -O2 \
	-Wall 
## Process this file with automake to produce Makefile.in


lib_LTLIBRARIES =  \
	libCyberBase.la

libCyberBase_la_SOURCES =  \
	Overall.cc \
	Overall.h \
	../SPKit/io/fileStream.cc \
	../SPKit/io/fileStream.h \
	../SPKit/io/memoryStream.h \
	../SPKit/io/terminal.h \
	../SPKit/misc/converter.cc \
	../SPKit/misc/converter.h \
	../SPKit/misc/listopr.h \
	../SPKit/misc/memopr.h \
	../SPKit/structure/array.h \
	../SPKit/structure/string.cc \
	../SPKit/structure/string.h \
	../SPKit/defs.h \
	../SPKit/io/stringStream.cc \
	../SPKit/io/memoryStream.cc \
	../SPKit/structure/array.cc \
	../SPKit/io/terminal.cc \
	RDLIO.cc \
	RDLIO.h
