## Process this file with automake to produce Makefile.in


lib_LTLIBRARIES =  \
	libcyberbase.la

libcyberbase_la_SOURCES =  \
	Overall.cc \
	Overall.h \
	../SPKit/io/fileStream.cc \
	../SPKit/io/fileStream.h \
	../SPKit/io/memoryStream.h \
	../SPKit/io/terminal.h \
	../SPKit/misc/converter.cc \
	../SPKit/misc/converter.h \
	../SPKit/misc/listopr.h \
	../SPKit/misc/memopr.h \
	../SPKit/structure/array.h \
	../SPKit/structure/string.cc \
	../SPKit/structure/string.h \
	../SPKit/defs.h

libcyberbase_la_CFLAGS = -Os \
	-Wall 
