## Process this file with automake to produce Makefile.in


SUBDIRS = \
	io \
	misc \
	structure

bin_PROGRAMS =  \
	spkitdemo

spkitdemo_SOURCES =  \
	defs.h \
	main.cc \
	spkit.h \
	io/fileStream.cc \
	io/fileStream.h \
	io/memoryStream.h \
	io/terminal.h \
	misc/converter.cc \
	misc/converter.h \
	misc/listopr.h \
	misc/memopr.h \
	structure/array.h \
	structure/string.cc \
	structure/string.h
