## Process this file with automake to produce Makefile.in

## Created by Anjuta

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g


bin_PROGRAMS =  \
	rsctool

rsctool_SOURCES =  \
	main.cc \
	../SPKit/structure/array.h \
	../SPKit/structure/string.cc \
	../SPKit/structure/string.h \
	../SPKit/io/fileStream.cc \
	../SPKit/io/fileStream.h \
	../SPKit/io/memoryStream.h \
	../SPKit/io/terminal.h
