
libCyberBase_la_CXXFLAGS = -I@top_srcdir@/LibCyberBase/ \
	-O2 
## Process this file with automake to produce Makefile.in


lib_LTLIBRARIES =  \
	libCyberBase.la

libCyberBase_la_SOURCES =  \
	Overall.cc \
	Overall.h \
	RDLIO.cc \
	RDLIO.h \
	SlWave/wave.cc \
	SlWave/wave.h \
	CVDB/CBVIO.cc \
	CVDB/CBVIO.h \
	CVDB/CVDB.cc \
	CVDB/CVDB.h \
	CVDB/FrameBuffer.cc \
	CVDB/FrameBuffer.h \
	CVDB/MultiFrameBuffer.cc \
	CVDB/MultiFrameBuffer.h \
	SPKit/defs.h \
	SPKit/io/fileStream.cc \
	SPKit/io/fileStream.h \
	SPKit/io/memoryStream.cc \
	SPKit/io/memoryStream.h \
	SPKit/io/stringStream.cc \
	SPKit/io/stringStream.h \
	SPKit/io/terminal.cc \
	SPKit/io/terminal.h \
	SPKit/misc/converter.cc \
	SPKit/misc/converter.h \
	SPKit/misc/listopr.h \
	SPKit/misc/memopr.h \
	SPKit/structure/array.cc \
	SPKit/structure/array.h \
	SPKit/structure/string.cc \
	SPKit/structure/string.h
	FrameBuffer.cc \
	FrameBuffer.h \
	MultiFrameBuffer.cc \
	MultiFrameBuffer.h \
	WaveBuffer.cc \
	WaveBuffer.h
